@@ -115,6 +115,7 @@ enum ExprDef {
 	EDisplay( e : Expr, isCall : Bool );
 	EDisplayNew( t : TypePath );
 	ETernary( econd : Expr, eif : Expr, eelse : Expr );
+	ECheckType( e : Expr, t : ComplexType );
 }
 
 enum ComplexType {
